static/native.css
/* styles when not embedded */

html, body {
	margin: 0;
	padding: 0;
	font-size: 14px;
	font-family: 'Droid Sans', sans-serif;
}
@media (min-width: 400px) {
	html, body {
		font-size: 18px;
	}
}
@media (min-width: 600px) {
	html, body {
		font-size: 20px;
	}
}
@media (min-width: 800px) {
	html, body {
		font-size: 25px;
	}
}

.bbt_h1 {
	margin: 0;
	padding-top: 0.2em;
	text-align: center;
	font-size: 140%;
}

.bbt_main {
	max-width:33em;
	margin:0 auto;
}

.bbt_shortcuts {
	position: fixed;
	top: 0;
	left: 0;
}
@media (max-width: 1000px) {
	.bbt_shortcuts {
		position: static;
	}
	.bbt_shortcut {
		display: inline-block;
		margin-right: 1.5em;
		margin-bottom: 0.8em;
		min-width: 15em;
	}
}
@media (min-width: 1001px) and (max-width: 1700px) {
	.bbt_shortcuts {
		position: static;
	}
	.bbt_root {
		display: -webkit-flex;
		display: flex;
	}
}

